working to import music data